[package]
name = "muffin-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"], version = "0.9.0-rc.1"}